--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "zentao",
   "title": "Zentao",
-  "description": "Raycast Extension for Zentao(禅道) ",
+  "description": "Raycast Extension for Zentao",
   "icon": "extension-icon.png",
   "author": "CaffeineCat",
   "owner": "caffeinecat26",
@@ -12,13 +12,40 @@
       "name": "search-my-tasks",
       "title": "Search My Tasks",
       "subtitle": "Zentao",
-      "description": "",
+      "description": "Search and view your assigned tasks in Zentao",
       "mode": "view"
+    }
+  ],
+  "preferences": [
+    {
+      "name": "zentaoUrl",
+      "type": "textfield",
+      "required": true,
+      "title": "Zentao URL",
+      "description": "The base URL of your Zentao installation (e.g., http://193.5.100.21:8000)",
+      "placeholder": "http://your-zentao-server:port"
+    },
+    {
+      "name": "zentaoSid",
+      "type": "password",
+      "required": true,
+      "title": "Zentao Session ID",
+      "description": "Your Zentao session ID (zentaosid cookie value)",
+      "placeholder": "Your zentaosid cookie value"
+    },
+    {
+      "name": "username",
+      "type": "textfield",
+      "required": true,
+      "title": "Username",
+      "description": "Your Zentao username",
+      "placeholder": "Your Zentao username"
     }
   ],
   "dependencies": {
     "@raycast/api": "^1.102.3",
-    "@raycast/utils": "^1.17.0"
+    "@raycast/utils": "^1.17.0",
+    "cheerio": "^1.1.2"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^2.0.4",
