--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "CaffeineCat",
   "owner": "caffeinecat26",
   "license": "MIT",
+  "type": "module",
   "commands": [
     {
       "name": "search-my-tasks",
@@ -83,6 +84,7 @@
     "@types/node": "22.13.10",
     "@types/react": "19.0.10",
     "eslint": "^9.22.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
   },
