--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
     "@raycast/utils": "^1.17.0",
     "cheerio": "^1.1.2",
     "dayjs": "^1.11.13",
+    "fuse.js": "^7.1.0",
     "i18next": "^25.3.2",
+    "pinyin-match": "^1.2.8",
     "radash": "^12.1.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.6.1"
