--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "cSpell.words": [
-        "Exclamationmark",
-        "zentao",
-        "Zentao",
-        "zentaosid"
-    ]
+  "cSpell.words": ["Exclamationmark", "zentao", "Zentao", "zentaosid"]
 }
