--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.5.3",
+    "prettier-plugin-jsdoc": "^1.3.3",
     "typescript": "^5.8.2"
   },
   "scripts": {
